--- a/AngularApp/src/styles.css
+++ b/AngularApp/src/styles.css
@@ -90,3 +90,18 @@ agm-map {
     border: 0px;
     text-align: center;
 }
+
+.center-icon-btn {
+    display: inline-block;
+    border-radius: 50%;
+    border: 0px;
+}
+
+.icon {
+    display: table-cell;
+    vertical-align: middle; 
+    text-align: center;
+    text-decoration: none;
+    height: 30px;
+    width: 25px;
+}
