--- a/AngularApp/src/app/main/login/login.component.css
+++ b/AngularApp/src/app/main/login/login.component.css
@@ -1,5 +1,5 @@
 .body {
-    background: url("assets/icons/wallpaper_restaurant_3.jpg");
+    background: url("./../../../assets/icons/wallpaper_restaurant_3.jpg");
     padding-top: 5%;
 }
 .cardlogin{
