--- a/AngularApp/src/app/main/login/login.component.html
+++ b/AngularApp/src/app/main/login/login.component.html
@@ -42,24 +42,31 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">REGISTRO DE JUGADOR</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Registro de {{user.email}}</h5>
       </div>
       <div class="modal-body">
         <div class="form-group row">
-          <label for="nSize" class="col-sm-6 col-form-label">Nickname</label>
+          <label for="nSize" class="col-sm-6 col-form-label">Nombre</label>
           <div class="col-sm-6">
-            <input type="text" [(ngModel)]="nickname" class="form-control" id="idNickName" placeholder="....">
+            <input type="text" [(ngModel)]="user.nombre" class="form-control" id="iNombre" placeholder="....">
           </div>
         </div>
         <div class="form-group row">
-          <label for="rSize" class="col-sm-6 col-form-label">Detalles</label>
+          <label for="rSize" class="col-sm-6 col-form-label">Telefono</label>
           <div class="col-sm-6">
-            <input type="text" [(ngModel)]="details" class="form-control" id="idDetails" placeholder="....">
+            <input type="text" [(ngModel)]="user.telefono" class="form-control" id="iTelefono" placeholder="....">
           </div>
         </div>
+        <div>
+        <label for="rSize" class="col-sm-6 col-form-label">Elige la ubicación de entregas de tu cuenta</label>
+        <button (click)="eventoloquesea()"
+          class="center-icon-btn btn btn-danger" ngbTooltip="Escoger ubicación"><i class="material-icons icon">
+            add_location
+          </i>
+        </button>
       </div>
       <div class="modal-footer">
-        <button type="button" (click)="registerUser()" data-dismiss="modal" class="acceptButton">Aceptar</button>
+        <button type="button" (click)="registerUser()" data-dismiss="modal" class="acceptButton">Registrarse</button>
         <button type="button" class="cancelButton" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
