Vista horarios hecha
- falta funcionalidad
- ya se agrego locación a registro
- se reacomodó vista de agregar restaurante

--- a/AngularApp/src/app/main/login/login.component.html
+++ b/AngularApp/src/app/main/login/login.component.html
@@ -36,7 +36,25 @@
     </div>
   </div>
 </div>
-
+<!-- map modal -->
+<div class="modal" id="modalUserMap" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Ubicación del usuario {{user.nombre}}</h5>
+      </div>
+      <div class="modal-body">
+        <agm-map class="map"  [latitude]="restLocation[0]"
+          [longitude]="restLocation[1]" (mapClick)="markPosition($event)">
+            <agm-marker [latitude]="restLocation[0]" [longitude]="restLocation[1]"></agm-marker>
+        </agm-map>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" data-dismiss="modal" class="btn btn-dark">Aceptar</button> 
+      </div>
+    </div>
+  </div>
+</div>
 <!-- Register Modal -->
 <div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
@@ -48,18 +66,18 @@
         <div class="form-group row">
           <label for="nSize" class="col-sm-6 col-form-label">Nombre</label>
           <div class="col-sm-6">
-            <input type="text" [(ngModel)]="user.nombre" class="form-control" id="iNombre" placeholder="....">
+            <input type="text" [(ngModel)]="user.nombre" class="form-control" id="iNombre" placeholder="Nombre...">
           </div>
         </div>
         <div class="form-group row">
           <label for="rSize" class="col-sm-6 col-form-label">Telefono</label>
           <div class="col-sm-6">
-            <input type="text" [(ngModel)]="user.telefono" class="form-control" id="iTelefono" placeholder="....">
+            <input type="text" [(ngModel)]="user.telefono" class="form-control" id="iTelefono" placeholder="Teléfono...">
           </div>
         </div>
         <div>
         <label for="rSize" class="col-sm-6 col-form-label">Elige la ubicación de entregas de tu cuenta</label>
-        <button (click)="eventoloquesea()"
+        <button (click)="openMapModal()"
           class="center-icon-btn btn btn-danger" ngbTooltip="Escoger ubicación"><i class="material-icons icon">
             add_location
           </i>
