--- a/AngularApp/src/app/main/account/account.component.html
+++ b/AngularApp/src/app/main/account/account.component.html
@@ -36,27 +36,34 @@
         <div class="modal-header">
           <!-- <img class="card-img-top" src="{{currentRest?.nombre}}" width="100px" data-holder-rendered="true">  -->
         </div>
-        <div class="modal-body offset-md-1">
+        <div class="modal-body">
           <div class="form-group row"> 
             <label class="col-sm-3 col-form-label">Nombre: </label> 
-            <div class="col-sm-8"> 
+            <div class="col-sm-9"> 
               <input type="text" [(ngModel)]="restName" class="form-control" placeholder="Nombre..."> 
             </div> 
           </div> 
           <div class="form-group row"> 
             <label class="col-sm-3 col-form-label">Descripción: </label> 
-            <div class="col-sm-8"> 
+            <div class="col-sm-9"> 
               <textarea class="form-control" maxlength="150" [(ngModel)]="restDescription" placeholder="Descripción..." rows="4"></textarea> 
             </div> 
           </div>
           <div class="form-group row"> 
             <label class="col-sm-3 col-form-label">Empresa: </label> 
-            <div class="col-sm-8"> 
+            <div class="col-sm-9"> 
               <input type="text" [(ngModel)]="restName" class="form-control" placeholder="Empresa..."> 
             </div> 
           </div>
-          <div class="form-group row"> 
-            <div class="col-sm-12 offset-md-4"> 
+          <div class="form-group">
+            <label>Escoja la ubicación de su restaurante</label> 
+            <div class="form-group">
+              <agm-map class="map" [latitude]="restLocation[0]"
+                [longitude]="restLocation[1]" (mapClick)="markPosition($event)">
+                  <agm-marker [latitude]="restLocation[0]" [longitude]="restLocation[1]"></agm-marker>
+              </agm-map>
+            </div>
+            <!-- <div class="col-sm-12 offset-md-4"> 
               <button style="margin: 2%" (click)="openMapModal()"
                 class="center-icon-btn btn btn-danger" ngbTooltip="Escoger ubicación"><i class="material-icons icon">
                   add_location
@@ -67,6 +74,15 @@
                   schedule
                 </i>
               </button>  
+            </div> -->
+            <div class="form-group row">
+              <div class="colo-sm-12 offset-md-4">
+                <button style="margin: 2%" (click)="openScheduleModal()"
+                  class="center-icon-btn btn btn-success" ngbTooltip="Escoger horario"><i class="material-icons icon">
+                    schedule
+                  </i>
+                </button> 
+              </div>
             </div>
           </div>
         </div>
@@ -111,14 +127,14 @@
     </div>
   </div>
   <!-- open map modal -->
-  <div class="modal" id="modalRestMap" tabindex="-1" role="dialog">
+  <!-- <div class="modal" id="modalRestMap" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Ubicación del restaurante {{restName}}</h5>
         </div>
         <div class="modal-body">
-          <agm-map class="map"  [latitude]="restLocation[0]" id="delP" 
+          <agm-map class="map"  [latitude]="restLocation[0]"
             [longitude]="restLocation[1]" (mapClick)="markPosition($event)">
               <agm-marker [latitude]="restLocation[0]" [longitude]="restLocation[1]"></agm-marker>
           </agm-map>
@@ -128,10 +144,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- open schedule modal -->
   <div class="modal" id="modalAddSchedule" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Horario del restaurante {{restName}}</h5>
@@ -139,9 +155,17 @@
         <div class="modal-body">
           <ul class="list-group" *ngFor="let day of week">
             <li class="list-group-item">
-              <input class="form-check-input" (change)="$event.target.checked ? show = true : show = false" type="checkbox" value="" id="dayIdLbl">
+              <input class="form-check-input" (change)="$event.target.checked ? day.checked = true : day.checked = false" type="checkbox" [value]="day.checked">
               <label class="form-check-label" for="dayIdLbl">{{day.day}}</label>
-              <ngb-timepicker [(ngModel)]="time" [meridian]="meridian"></ngb-timepicker>
+              <div class="form-group row">
+                <div class="col-sm-5 offset-md-1">
+                  <ngb-timepicker [(ngModel)]="day.timeInit" [meridian]="day.meridianInit" [disabled]="!day.checked"></ngb-timepicker>
+                </div>
+                <label style="display: table-cell;display: inline-block;vertical-align: middle" class="col-sm-1 col-form-label"></label>
+                <div class="col-sm-5">
+                  <ngb-timepicker [(ngModel)]="day.timeEnd" [meridian]="day.meridianEnd" [disabled]="!day.checked"></ngb-timepicker>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
