--- a/AngularApp/src/app/main/login/login.component.html
+++ b/AngularApp/src/app/main/login/login.component.html
@@ -44,7 +44,7 @@
         <h5 class="modal-title">Ubicación del usuario {{user.nombre}}</h5>
       </div>
       <div class="modal-body">
-        <agm-map class="map"  [latitude]="restLocation[0]"
+        <agm-map class="map" [zoom]="15" [latitude]="restLocation[0]"
           [longitude]="restLocation[1]" (mapClick)="markPosition($event)">
             <agm-marker [latitude]="restLocation[0]" [longitude]="restLocation[1]"></agm-marker>
         </agm-map>
