Error con modals login arreglado

--- a/AngularApp/src/app/main/account/account.component.html
+++ b/AngularApp/src/app/main/account/account.component.html
@@ -110,7 +110,7 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <img class="card-img-top" src="{{currentRest?.nombre}}" width="100px" data-holder-rendered="true"> 
+          <img class="card-img-top" src="{{restImage}}" width="100px" data-holder-rendered="true"> 
         </div>
         <div class="modal-body">
           <div class="form-group offset-md-1">
