Ver horario popover hover
- faltan las acciones extra (editar)

--- a/AngularApp/src/app/main/orders/pending/pending.component.html
+++ b/AngularApp/src/app/main/orders/pending/pending.component.html
@@ -20,7 +20,7 @@
           Recoger aquí</td>
         <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
           <button (click)="openMapModal(order.ubicacion._latitude, order.ubicacion._longitude)"
-          class="btn-open-map" ngbTooltip="Abrir en mapa"><i class="material-icons">
+          class="center-icon-btn btn-success" ngbTooltip="Abrir en mapa"><i class="material-icons icon">
             open_in_new
             </i></button>  
         </td>
