--- a/AngularApp/src/app/main/account/account.component.html
+++ b/AngularApp/src/app/main/account/account.component.html
@@ -28,18 +28,22 @@
           <td>{{restaurants[restKey].descripcion}}</td>
           <td>
             <button (click)="openMapModal(restaurants[restKey].ubicacion)"
-              class="btn-open-map" ngbTooltip="Abrir en mapa">
-                <i class="material-icons">
+              class="center-icon-btn btn-success" ngbTooltip="Abrir en mapa">
+                <i class="material-icons icon">
                 open_in_new
                 </i>
             </button>
           </td>
           <td>
-            <button (click)="openScheduleModal(restaurants[restKey].horario)"
-              class="btn-open-map" ngbTooltip="Abrir en mapa">
-                <i class="material-icons">
-                open_in_new
-                </i>
+            <ng-template #popContent let-schedule="schedule">
+              <div *ngFor="let dayS of showSchedule(restaurants[restKey].horario)">
+                {{dayS.day}} -> {{dayS.begin.hour}}:{{dayS.begin.min}}{{dayS.begin.meridian}} - {{dayS.finish.hour}}:{{dayS.finish.min}}{{dayS.finish.meridian}}
+              </div>
+            </ng-template>
+            <button class="center-icon-btn btn-schedule" [ngbPopover]="popContent" triggers="mouseenter:mouseleave" popoverTitle="Horario">
+              <i class="material-icons icon">  
+                schedule
+              </i>
             </button>
           </td>
           <td>acciones</td>          
