--- a/AngularApp/src/app/main/orders/approved/approved.component.html
+++ b/AngularApp/src/app/main/orders/approved/approved.component.html
@@ -20,13 +20,14 @@
           Recoger aquí</td>
         <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
           <button (click)="openMapModal(order.ubicacion._latitude, order.ubicacion._longitude)"
-          class="btn-open-map" ngbTooltip="Abrir en mapa"><i class="material-icons">
-            open_in_new
+          class="center-icon-btn btn-success" ngbTooltip="Abrir en mapa">
+            <i class="material-icons icon">
+              open_in_new
             </i></button>  
         </td>
-        <td style="text-align: center;vertical-align: middle">
-          <button class="btn-finish" ngbTooltip="Finalizar pedido">
-            <i style="font-size: 12px;" class="material-icons" (click)="isFinished(order.id)">
+        <td style="text-align: center;">
+          <button class="btn-finish center-icon-btn" ngbTooltip="Finalizar pedido">
+            <i style="font-size: 12px;" class="material-icons icon" (click)="isFinished(order.id)">
               done
             </i>
           </button>
