Dont know what happend

--- a/AngularApp/src/app/main/account/account.component.css
+++ b/AngularApp/src/app/main/account/account.component.css
@@ -25,3 +25,8 @@
     background-color: blueviolet;
     color: white;
 }
+
+.btn-set-restaurant {
+    background-color: blue;
+    color: white;
+}
